fix($theme-default): hard to read in a dark-themed browser (close: #1025)

--- a/packages/@vuepress/theme-default/styles/theme.styl
+++ b/packages/@vuepress/theme-default/styles/theme.styl
@@ -8,6 +8,7 @@
 html, body
   padding 0
   margin 0
+  background-color #fff
 
 body
   font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
